	
0.7.3:
	-> save transcript with commit message (save button with balloon or ctrl-c)
	-> document copy functionality via collection manager (in my-documents table on bottom right)
	-> bugfix: loupe did not work for images that were scaled internally (i.e. images with more than 15 million pixels)
	-> render control characters (whitespace, tab, end of line) into the text (1st version...)
	-> bugfix: button that determines which styles are rendered did not work properly
	-> bugfix: dropdowntoolitem with radio style items fired selection event twice
	
0.7.4:
	-> Bugfix: crash when opening and closing collection manager
	-> new admin area functionality: apply affine transformations to doc; batch replace images for remote doc
	
0.7.5:
	-> fixed severe tagging bug: characters from other alphabets not recovered on transcript reload
	-> collection manager remodelled:
		add to collection, remove from collection and duplicate document now also possible for collection owner
		removed my-docs table and merged it with the documents table
	-> rtf export replaced by docx export
	
0.7.6:
	-> fixed minor bug in remember credentials functionality: last logged in user is remembered
	-> deleting a page added
	-> proxy settings
	-> display status and user in thumbnail overview
	
0.7.7:
	-> bugfix: could not load local document any more
	
0.7.8:
	-> rotate image 90 degrees
	-> bugfix: baseline focus with angle >180 degrees were displayed upside down
	-> export bugs fixed
	-> drawing direction arcs for baselines
	
0.7.9:
	-> adding new points on boundary only possible when holding down ctrl/cmd key (prevents adding new points by accident)
	-> bugfix: adding gap tag at the end of last line of region led to crash 
	-> rendering of polyrectangle around baselines (and selection of the baselines within those)
	-> locking zoom on focus possible (via wrench tool on canvas toolbar)
	-> auto login feature
	-> fixed catti bug (whitespace from recieved suffix removed)


	