@@ -70,7 +70,7 @@ enableIndexedStyles=true
 tagNames=
 showLineBullets = true
 showTipOfTheDay = false
-showControlSigns = false
+showControlSigns = true
 # proxy settings
 proxyEnabled=false
 proxyHost=
